// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxAggregation render initial state with all props set 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <List
    bordered={false}
    dataSource={Array []}
    footer={null}
    header={
      <strong>
        Test
      </strong>
    }
    loading={false}
    pagination={false}
    prefixCls="ant-list"
    split={true}
  >
    <Item
      key="bucket1"
    >
      <Meta
        title={
          <CheckboxItem
            checked={true}
            onChange={[Function]}
          >
            bucket1
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        1
      </Tag>
    </Item>
    <Item
      key="bucket2"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket2
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
  </List>
</div>
`;

exports[`CheckboxAggregation render more than 10 after show more clicked 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <List
    bordered={false}
    dataSource={Array []}
    footer={null}
    header={
      <strong>
        Test
      </strong>
    }
    loading={false}
    pagination={false}
    prefixCls="ant-list"
    split={true}
  >
    <Item
      key="bucket1"
    >
      <Meta
        title={
          <CheckboxItem
            checked={true}
            onChange={[Function]}
          >
            bucket1
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        1
      </Tag>
    </Item>
    <Item
      key="bucket2"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket2
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket3"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket3
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        3
      </Tag>
    </Item>
    <Item
      key="bucket4"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket4
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        4
      </Tag>
    </Item>
    <Item
      key="bucket5"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket5
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket6"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket6
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket7"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket7
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket8"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket8
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket9"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket9
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket10"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket10
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket11"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket11
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
  </List>
</div>
`;

exports[`CheckboxAggregation renders with show more button if buckets are more than 10 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <List
    bordered={false}
    dataSource={Array []}
    footer={
      <Button
        ghost={false}
        loading={false}
        onClick={[Function]}
        prefixCls="ant-btn"
      >
        Show more
      </Button>
    }
    header={
      <strong>
        Test
      </strong>
    }
    loading={false}
    pagination={false}
    prefixCls="ant-list"
    split={true}
  >
    <Item
      key="bucket1"
    >
      <Meta
        title={
          <CheckboxItem
            checked={true}
            onChange={[Function]}
          >
            bucket1
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        1
      </Tag>
    </Item>
    <Item
      key="bucket2"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket2
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket3"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket3
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        3
      </Tag>
    </Item>
    <Item
      key="bucket4"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket4
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        4
      </Tag>
    </Item>
    <Item
      key="bucket5"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket5
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket6"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket6
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket7"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket7
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket8"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket8
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket9"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket9
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
    <Item
      key="bucket10"
    >
      <Meta
        title={
          <CheckboxItem
            checked={false}
            onChange={[Function]}
          >
            bucket10
          </CheckboxItem>
        }
      />
      <Tag
        closable={false}
        prefixCls="ant-tag"
      >
        2
      </Tag>
    </Item>
  </List>
</div>
`;
